# fiddler-auditor

./: .flake8  CODEOWNERS  CONTRIBUTION.md  Makefile  README.md  UPGRADE.md  pyproject.toml
.github/workflows/: codelint.yml  docs.yml  publish.yml  test.yml
auditor/: __init__.py
auditor/assets/data/: snips_dataset_dev.csv  snips_dataset_test.csv  snips_dataset_train.csv
auditor/evaluation/: color_util.py  discriminative.py  evaluate.py  expected_behavior.py  generative.py
auditor/generations/: paraphrase.py
auditor/perturbations/: __init__.py  base.py  constants.py  paraphrase.py  text.py
auditor/reporting/: __init__.py  generate.py
auditor/reporting/templates/: report_template.html
auditor/utils/: data.py  dataset.py  format.py  logging.py  misc.py  progress_logger.py  similarity.py
docs/source/: conf.py  index.rst  jointbert.rst  modules.rst  quickstart.ipynb
examples/: Custom_Evaluation.ipynb  Custom_Transformation.ipynb  LLM_Evaluation.ipynb  LLM_Evaluation_Azure.ipynb  quickstart.ipynb
tests/: __init__.py  test_dataset.py  test_evaluation.py  test_expected_behaviors.py  test_llm.py  test_perturbations.py  validation_utils.py
tests/test_data/: test_expected_behaviors.yml
