[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "auditor"
version = "0.0.5"
authors = ["Fiddler Labs <support@fiddler.ai>"]
description = "Auditing large language models made easy."
readme = "README.md"
license = "Elastic License 2.0 (ELv2)"
repository = "https://github.com/fiddler-labs/fiddler-auditor"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
notebook = "^6.0.1"
fiddler-checklist = "^0.0.1"
pandas = "^1.3.5"
spacy-transformers = "^1.3.4"
jinja2 = "3.1.2"
langchain = "^0.1.11"
openai = "^1.13.3"
sentence-transformers = "^2.5.1"
tqdm = "^4.66.1"
httplib2 = "~0.22.0"
langchain-openai = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "*"
build = "*"
twine = "*"
flake8 = "*"

#[tool.poetry.package.include]
#"auditor/assets/data/*.csv" = { format = "sdist" }
#"auditor/assets/data/*.txt" = { format = "sdist" }
#"auditor/reporting/templates/report_template.html" = { format = "sdist" }